@@ -10,6 +10,7 @@ void f_close(TOPLEVEL *w_current);
 void f_save_close(TOPLEVEL *w_current, char *filename);
 void f_save(TOPLEVEL *w_current, char *filename);
 /* f_image.c */
+void f_image_write_objects(TOPLEVEL *w_current, OBJECT *head, int start_x, int start_y, float scale, int color_mode);
 void f_image_write(TOPLEVEL *w_current, char *filename, int width, int height, int color_mode);
 void f_image_set_type(TOPLEVEL *w_current, int type);
 /* f_print.c */
@@ -115,6 +116,7 @@ char *o_attrib_search_numslots(OBJECT *object, OBJECT **return_found);
 char *o_attrib_search_default_slot(OBJECT *object);
 char *o_attrib_search_pin_number(OBJECT *object, int pin_number, OBJECT **return_found);
 char *o_attrib_search_slot_number(OBJECT *object, int slotnumber);
+char *o_attrib_search_component(OBJECT *object, char *name);
 void o_attrib_slot_update(TOPLEVEL *w_current, OBJECT *object);
 void o_attrib_slot_copy(TOPLEVEL *w_current, OBJECT *original, OBJECT *target);
 int o_attrib_count_toplevel(TOPLEVEL *w_current, char *name);
@@ -153,7 +155,6 @@ void o_box_rotate_world(TOPLEVEL *w_current, int world_centerx, int world_center
 void o_box_mirror(TOPLEVEL *w_current, int centerx, int centery, OBJECT *object);
 void o_box_mirror_world(TOPLEVEL *w_current, int world_centerx, int world_centery, OBJECT *object);
 void o_box_modify(TOPLEVEL *w_current, OBJECT *object, int x, int y, int whichone);
-/* o_box_circle.c */
 /* o_bus_basic.c */
 void get_bus_bounds(TOPLEVEL *w_current, LINE *line, int *left, int *top, int *right, int *bottom);
 void world_get_bus_bounds(TOPLEVEL *w_current, LINE *line, int *left, int *top, int *right, int *bottom);
@@ -262,6 +263,10 @@ void o_conn_disconnect(PAGE *p_current);
 void o_conn_print_busmidpoint(TOPLEVEL *w_current, OBJECT *bus_object, FILE *fp, int x, int y, int other_wx, int other_wy);
 void o_conn_image_busmidpoint(TOPLEVEL *w_current, OBJECT *bus_object, int x, int y, int other_wx, int other_wy);
 /* o_image.c */
+void o_image_init(void);
+void o_image_create(int x, int y, int color_mode);
+void o_image_close(void);
+int o_image_write(char *filename);
 int o_image_geda2gd_color(int color);
 /* o_line_basic.c */
 void get_line_bounds(TOPLEVEL *w_current, LINE *line, int *left, int *top, int *right, int *bottom);
