@@ -8,6 +8,11 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+2000-01-30  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/o_attrib.c: Added o_attrib_search_component which looks for
+	  an attribute both inside and outside of the component 
+
 2000-01-15  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_image.c: Fixed bug -- allow the background of pngs to
